# py-launch-lab

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  plan.md  pyproject.toml  taskfile.yaml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  windows.yml
crates/pyshim-win/: Cargo.toml  build.rs
crates/pyshim-win/src/: cli.rs  detect.rs  launch.rs  main.rs  resolve.rs  result.rs
docs/: detection-deep-dive.md  development-history.md  implementation.md  index.md  overview.md  plan.md  report.md  scenario-matrix.md  windows-launch-semantics.md
docs/findings/: anomalies.md  report.md
docs/issues/: m1-static-pe-inspection.md  m2-python-vs-pythonw-launch.md  m3-uv-uvw-scenario-coverage.md  m4-rust-shim-integration.md  m5-ci-artifacts-reporting.md
fixtures/direct_exec/: README.md
fixtures/pkg_console/: pyproject.toml
fixtures/pkg_console/src/lab_console/: main.py
fixtures/pkg_dual/: pyproject.toml
fixtures/pkg_dual/src/lab_dual/: main.py
fixtures/pkg_gui/: pyproject.toml
fixtures/pkg_gui/src/lab_gui/: main.py
fixtures/raw_py/: hello.py
fixtures/raw_pyw/: hello.pyw
src/launch_lab/: __init__.py  cli.py  collect.py  detect_windows.py  expectations.py  html_report.py  inspect_pe.py  matrix.py  models.py  probe.py  report.py  runner.py  util.py  uv_provider.py
tests/: test_detect_windows.py  test_expectations.py  test_html_report.py  test_matrix.py  test_pe_inspection.py  test_report.py  test_runner.py  test_schema.py
tests/integration/: test_python_vs_pythonw.py  test_shim.py  test_uv_run.py  test_uv_tool_install.py  test_uvw.py  test_uvx.py  test_venv.py
tools/: bootstrap.ps1  clean.ps1  export-artifacts.ps1  run-scenario.ps1
