[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-launch-lab"
version = "0.1.0"
description = "Windows-first conformance and evidence-gathering lab for Python launch modes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["python", "windows", "launcher", "uv", "conformance"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
py-launch-lab = "launch_lab.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/launch_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
