[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-window-gui"
version = "0.1.0"
description = "GUI entrypoint fixture for py-launch-lab"
requires-python = ">=3.11"

[project.gui-scripts]
lab-window-gui = "lab_gui.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_gui"]
